--- a/app/views/snaps/index.html.erb
+++ b/app/views/snaps/index.html.erb
@@ -3,24 +3,20 @@
 <h1>Snaps</h1>
 
 <table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Detail</th>
-      <th>Image</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
   <tbody>
     <% @snaps.each do |snap| %>
       <tr>
-        <td><%= snap.name %></td>
-        <td><%= snap.detail %></td>
-        <td><%= snap.image %></td>
-        <td><%= link_to 'Show', snap %></td>
-        <td><%= link_to 'Edit', edit_snap_path(snap) %></td>
-        <td><%= link_to 'Destroy', snap, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to image_tag(snap.image.url, width: '200', height: '300'), snap if snap.image.thumb.url %></td>
+      </tr>
+      <tr>
+        <td>title: <%= snap.name %></td>
+      </tr>
+      <tr>
+        <td>detail: <%= snap.detail %></td>
+      </tr>
+      <tr>
+        <td><%= link_to 'Edit', edit_snap_path(snap) %> | <%= link_to 'Destroy', snap, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
