--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <header>
+      <%= link_to 'New Snap', new_snap_path %>
+    </header>
+
     <%= yield %>
   </body>
 </html>
