--- a/app/views/snaps/_form.html.erb
+++ b/app/views/snaps/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: snap, local: true) do |form| %>
   <% if snap.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(snap.errors.count, "error") %> prohibited this snap from being saved:</h2>
+      <h2><%= pluralize(snap.errors.count, "error") %> があるためSnapの作成に失敗しました。</h2>
 
       <ul>
       <% snap.errors.full_messages.each do |message| %>
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :images %>
-    <%= form.file_field :images %>
+    <%= form.file_field :images, multiple: true %>
   </div>
 
   <div class="actions">
