--- a/app/views/snaps/index.html.erb
+++ b/app/views/snaps/index.html.erb
@@ -7,7 +7,7 @@
   <tbody>
     <% @snaps.each do |snap| %>
       <tr>
-        <td><%= link_to image_tag(snap.images.url, width: '200', height: '300'), snap %></td>
+        <td><%= link_to image_tag(snap.images[0].url, width: '200', height: '300'), snap %></td>
       </tr>
       <tr>
         <td>title: <%= snap.title %></td>
